Content editions and responsive updates

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,11 +4,7 @@
 
 <div>
     <div class="wrapper">
-        <div class="row">
-            <div class="col-xs-12 col-sm-offset-8 col-sm-4">
-                <h1>North East based Graphic Designer specialising in Logo & Brand Identity, currently working at Better.</h1>
-            </div>
-        </div>
+        <h1>Work</h1>
 
         <div class="row media-container">
         {{ range $i, $e := (where .Data.Pages "Section" "work") }}
