--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,8 +2,9 @@
 
 <div class="wrapper">
     <div class="row">
-        <div class="col-xs-12 col-sm-offset-8 col-sm-4">
-            <h1>North East based Graphic Designer specialising in Logo & Brand Identity, currently working at Better.</h1>
+        <div class="col-xs-12">
+            <!-- <h1>Logo & identity design<br>with a minimal approach</h1> -->
+            <h1>Logo & Brand Identity Designer, <br>currently working at Better Studio.</h1>
         </div>
     </div>
 
