--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -3,14 +3,23 @@
 <div class="about-background"></div>
 
 <div class="wrapper">
+    <!-- <h1 class="project-title">
+        Simplicity by approach
+    </h1> -->
     <div class="row">
         <div class="col-xs-12 col-sm-6">
             <p class="about-paragraph">
-                I’m Matthew, North East based Graphic Designer specialising in Logo & Brand Identity. Currently working as a Creative Designer for Better, I’ve worked on projects for a wide range of business sectors.
+                I’m Matthew, North East based Graphic Designer specialising in Logo & Brand Identity. For the past 3 years I have worked as a Creative Designer for Better Brand Agency, working on projects for a wide range of business sectors.
             </p>
             <p class="about-paragraph">
-                Over the past years, I’ve had experience in brand design, editorial, web design, art direction, photography and naming strategy.
+                I’ve had experience in brand design, editorial, web design, art direction, photography and naming strategy.
             </p>
+            <h3>Contact</h3>
+            <ul class="get-in-touch">
+                <li><a href="mailto:hello@matthewgoodyear.com">Email</a></li>
+                <li><a href="https://www.instagram.com/gdy.design/">Instagram</a></li>
+                <li><a href="https://www.redbubble.com/people/mattgdyr/shop?asc=u>">Tee Shop</a></li>
+            </ul>
             <!-- <h2>Capabilities</h2>
             <ul class="capabilities">
                 <li>Creative Direction</li>
@@ -21,19 +30,27 @@
                 <li>Digital Design</li>
                 <li>Print</li>
             </ul> -->
-            <h3>Work Index</h3>
+            <h3>Index</h3>
             <ul class="work-index">
+                <div class="work-index-item">
+                    <li>Steady on your Feet (2020)</li>
+                    <!-- <img src="/img/bd/bd_thumb.jpg" alt=""> -->
+                </div>
+                <div class="work-index-item">
+                    <li>Castle Fields (2020)</li>
+                    <!-- <img src="/img/bd/bd_thumb.jpg" alt=""> -->
+                </div>
                 <div class="work-index-item">
                     <li>Business Durham (2020)</li>
                     <img src="/img/bd/bd_thumb.jpg" alt="">
                 </div>
                 <div class="work-index-item">
-                    <li>Realse! (2020)</li>
+                    <li>NECS (2019)</li>
                     <!-- <img src="/img/kinnery/kinnery_thumb.jpg" alt=""> -->
                 </div>
                 <div class="work-index-item">
-                    <li>NECS (2019)</li>
-                    <!-- <img src="/img/kinnery/kinnery_thumb.jpg" alt=""> -->
+                    <li>Realse! (2019)</li>
+                    <img src="/img/realise/realise_thumb.jpg" alt="">
                 </div>
                 <div class="work-index-item">
                     <li>Harrison Strategy Magazine (2019)</li>
@@ -92,29 +109,19 @@
                     <!-- <img src="/img/kinnery/kinnery_thumb.jpg" alt=""> -->
                 </div>
                 <div class="work-index-item">
-                    <li>The Parmo House (2017)</li>
-                    <!-- <img src="/img/kinnery/kinnery_thumb.jpg" alt=""> -->
-                </div>
-                <div class="work-index-item">
                     <li>CCAD Summer Show (2017)</li>
-                    <!-- <img src="/img/kinnery/kinnery_thumb.jpg" alt=""> -->
-                </div>
-                <div class="work-index-item">
-                    <li>Tame Impala Vinyl (2017)</li>
-                    <!-- <img src="/img/kinnery/kinnery_thumb.jpg" alt=""> -->
-                </div>
-                <div class="work-index-item">
-                    <li>Mykri Packaging (2016)</li>
                     <!-- <img src="/img/kinnery/kinnery_thumb.jpg" alt=""> -->
                 </div>
             </ul>
         </div>
         <div class="col-xs-12 col-sm-offset-2 col-sm-4">
-            <img src="/img/profile.png" alt="" class="profile-pic">
+            <div class="sticky">
 
-            <p class="about-paragraph contact-sticky">
-                Starting a project? Get in touch via Email and keep updated with future projects on Instagram.
-            </p>
+            </div>
+
+            <!-- <p class="about-paragraph contact-sticky">
+                Starting a project? Get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> and keep updated with future projects on <a href="www.instagram.com/gdy.design">Instagram</a>.
+            </p> -->
         </div>
     </div>
 
