--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -3,9 +3,6 @@
 <div class="about-background"></div>
 
 <div class="wrapper">
-    <!-- <h1 class="project-title">
-        Simplicity by approach
-    </h1> -->
     <div class="row">
         <div class="col-xs-12 col-sm-6">
             <p class="about-paragraph">
@@ -17,8 +14,7 @@
             <h3>Contact</h3>
             <ul class="get-in-touch">
                 <li><a href="mailto:hello@matthewgoodyear.com">Email</a></li>
-                <li><a href="https://www.instagram.com/gdy.design/">Instagram</a></li>
-                <li><a href="https://www.redbubble.com/people/mattgdyr/shop?asc=u>">Tee Shop</a></li>
+                <li><a href="https://www.instagram.com/goodyear.design/">Instagram</a></li>
             </ul>
             <!-- <h2>Capabilities</h2>
             <ul class="capabilities">
