--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,7 @@
                 <div class="col-xs-8 col-sm-4">
                     <ul class="navigation footer-nav">
                         <li class="">
-                            <a href="https://www.instagram.com/gdy.design/">Instagram</a>
+                            <a href="https://www.instagram.com/goodyear.design/">Instagram</a>
                         </li>
                         <li class="">
                             <a href="mailto:hello@matthewgoodyear.com">Email</a>
@@ -18,38 +18,6 @@
                     </ul>
                 </div>
             </div>
-
-
-
-
-
-            <!-- <p>&copy; Matthew Goodyear 2020</p>
-
-            <ul class="navigation">
-                <li class="">
-                    <a href="">Instagram</a>
-                </li>
-                <li class="">
-                    <a href="">Email</a>
-                </li>
-                <li class="">
-                    <a href="">Redbubble</a>
-                </li>
-            </ul> -->
-
-            <!-- <div class="row">
-                <div class="col-xs-8">
-                    <p>&copy; 2019</p>
-                </div>
-
-                <div class="col-xs-2">
-                    <p class="footer-link"><a href="https://www.instagram.com/gdy.design/">Instagram</a></p>
-                </div>
-
-                <div class="col-xs-2">
-                    <p class="footer-link"><a href="mailto:hello@matthewgoodyear.com">Email</a></p>
-                </div>
-            </div> -->
         </div>
     </footer>
 
