--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -29,6 +29,14 @@
             <h3>Index</h3>
             <ul class="work-index">
                 <div class="work-index-item">
+                    <li>Teesworks (2020)</li>
+                    <!-- <img src="/img/bd/bd_thumb.jpg" alt=""> -->
+                </div>
+                <div class="work-index-item">
+                    <li>StockUK (2020)</li>
+                    <img src="/img/stockuk/stockuk_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
                     <li>Steady on your Feet (2020)</li>
                     <!-- <img src="/img/bd/bd_thumb.jpg" alt=""> -->
                 </div>
