--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -23,11 +23,11 @@
                 </p>
             </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-xs-12">
                 <img src="{{ .Params.banner }}" alt="project-img" class="project-img banner">
             </div>
-        </div>
+        </div> -->
 
         {{ .Content }}
 
