--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -11,7 +11,7 @@
             <p class="about-paragraph">
                 I’ve had experience in brand design, editorial, web design, art direction, photography and naming strategy.
             </p>
-            <h3>Contact</h3>
+            <h3 id="contact">Contact</h3>
             <ul class="get-in-touch">
                 <li><a href="mailto:hello@matthewgoodyear.com">Email</a></li>
                 <li><a href="https://www.instagram.com/goodyear.design/">Instagram</a></li>
@@ -26,11 +26,23 @@
                 <li>Digital Design</li>
                 <li>Print</li>
             </ul> -->
-            <h3>Index</h3>
+            <h3>Work Index</h3>
             <ul class="work-index">
+                <!-- <div class="work-index-item">
+                    <li>Send Technology (2020)</li>
+                    <img src="/img/cubo/cubo_thumb.jpg" alt="">
+                </div>
+                <div class="work-index-item">
+                    <li>Troy Lake (2020)</li>
+                    <img src="/img/cubo/cubo_thumb.jpg" alt="">
+                </div> -->
+                <div class="work-index-item">
+                    <li>Cubo (2020)</li>
+                    <img src="/img/cubo/cubo_thumb.jpg" alt="">
+                </div>
                 <div class="work-index-item">
                     <li>Teesworks (2020)</li>
-                    <!-- <img src="/img/bd/bd_thumb.jpg" alt=""> -->
+                    <video src="/img/teesworks/teesworks_thumb_vid.mp4" alt="" autoplay="yes" loop="yes">
                 </div>
                 <div class="work-index-item">
                     <li>StockUK (2020)</li>
@@ -38,11 +50,11 @@
                 </div>
                 <div class="work-index-item">
                     <li>Steady on your Feet (2020)</li>
-                    <!-- <img src="/img/bd/bd_thumb.jpg" alt=""> -->
+                    <img src="/img/soyf/soyf_thumb.jpg" alt="">
                 </div>
                 <div class="work-index-item">
                     <li>Castle Fields (2020)</li>
-                    <!-- <img src="/img/bd/bd_thumb.jpg" alt=""> -->
+                    <img src="/img/castlefields/castlefields_thumb.jpg" alt="">
                 </div>
                 <div class="work-index-item">
                     <li>Business Durham (2020)</li>
@@ -50,7 +62,7 @@
                 </div>
                 <div class="work-index-item">
                     <li>NECS (2019)</li>
-                    <!-- <img src="/img/kinnery/kinnery_thumb.jpg" alt=""> -->
+                    <img src="/img/necs/necs_thumb.jpg" alt="">
                 </div>
                 <div class="work-index-item">
                     <li>Realse! (2019)</li>
@@ -77,8 +89,8 @@
                     <img src="/img/kader/kader_thumb.jpg" alt="">
                 </div>
                 <div class="work-index-item">
-                    <li>Realtime UK (2019)</li>
-                    <!-- <img src="/img/kinnery/kinnery_thumb.jpg" alt=""> -->
+                    <li>Realtime (2019)</li>
+                    <img src="/img/realtime/realtime_thumb.jpg" alt="">
                 </div>
                 <div class="work-index-item">
                     <li>Definition Agency (2019)</li>
@@ -87,10 +99,6 @@
                 <div class="work-index-item">
                     <li>Digital Skills Academy (2019)</li>
                     <img src="/img/dsa/dsa_thumb.jpg" alt="">
-                </div>
-                <div class="work-index-item">
-                    <li>Notorious Clothing (2018)</li>
-                    <!-- <img src="/img/kinnery/kinnery_thumb.jpg" alt=""> -->
                 </div>
                 <div class="work-index-item">
                     <li>University Hospital Association (2018)</li>
