--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-xs-12">
             <!-- <h1>Logo & identity design<br>with a minimal approach</h1> -->
-            <h1>Logo & Brand Identity Designer, <br>currently working at Better Studio.</h1>
+            <h1>Visual identities with<br>a minimal approach.</h1>
         </div>
     </div>
 
@@ -16,14 +16,46 @@
         </div>
     </div>
 
-    <div class="row end-sm">
-        <div class="col-xs-12 col-sm-4">
+    <div class="row">
+        <div class="col-sm-7 col-xs-12 flex-space-between">
+            <p class="about-paragraph about-paragraph-index">
+                I’m Matthew, North East based Graphic Designer specialising in Logo & Brand Identity Design. I'm currently working at Better Studio working on brand projects for a wide range of business sectors.
+            </p>
+            <p class="start-project">
+                Starting a new project? <a href="/about#contact">Let's talk</a>.
+            </p>
+        </div>
+
+        <div class="col-sm-4 col-sm-offset-1 col-xs-12 flex-space-between">
+            <div>
+                <h3>Selected Work</h3>
+                <ul class="get-in-touch">
+                    <li><a href="/work/teesworks">Teesworks</a></li>
+                    <li><a href="/work/essex">Essex Brewery</a></li>
+                    <li><a href="/work/kinnery">Kinnery</a></li>
+                </ul>
+            </div>
+
             <a href="/work" class="large-link">
-                <div class="link-title">View work</div>
+                <div class="link-title">View all</div>
                 <div class="dash"></div>
             </a>
         </div>
     </div>
+
+    <!-- <div class="row end-sm">
+        <div class="col-sm-8 col-xs-12">
+            <p class="start-project">
+                Starting a new project? <a href="">Let's talk</a>.
+            </p>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+            <a href="/work" class="large-link">
+                <div class="link-title">View all</div>
+                <div class="dash"></div>
+            </a>
+        </div>
+    </div> -->
 </div>
 
 {{ partial "footer.html" . }}
