Autoplay Safari Fix

--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -11,7 +11,7 @@
             <p class="about-paragraph">
                 I’ve had experience in brand design, editorial, web design, art direction, photography and naming strategy.
             </p>
-            <h3 id="contact">Contact</h3>
+            <h3>Contact</h3>
             <ul class="get-in-touch">
                 <li><a href="mailto:hello@matthewgoodyear.com">Email</a></li>
                 <li><a href="https://www.instagram.com/goodyear.design/">Instagram</a></li>
@@ -116,25 +116,17 @@
                     <li>Course Box (2017)</li>
                     <!-- <img src="/img/kinnery/kinnery_thumb.jpg" alt=""> -->
                 </div>
-                <div class="work-index-item">
-                    <li>Cities Clothing (2017)</li>
-                    <!-- <img src="/img/kinnery/kinnery_thumb.jpg" alt=""> -->
-                </div>
-                <div class="work-index-item">
-                    <li>CCAD Summer Show (2017)</li>
-                    <!-- <img src="/img/kinnery/kinnery_thumb.jpg" alt=""> -->
-                </div>
             </ul>
         </div>
-        <div class="col-xs-12 col-sm-offset-2 col-sm-4">
+        <!-- <div class="col-xs-12 col-sm-offset-2 col-sm-4">
             <div class="sticky">
 
             </div>
 
-            <!-- <p class="about-paragraph contact-sticky">
+            <p class="about-paragraph contact-sticky">
                 Starting a project? Get in touch via <a href="mailto:hello@matthewgoodyear.com">Email</a> and keep updated with future projects on <a href="www.instagram.com/gdy.design">Instagram</a>.
-            </p> -->
-        </div>
+            </p>
+        </div> -->
     </div>
 
     <!-- <div class="row end-sm">
