--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,7 +22,7 @@
                 I’m Matthew, North East based Graphic Designer specialising in Logo & Brand Identity Design. I'm currently working at Better Studio working on brand projects for a wide range of business sectors.
             </p>
             <p class="start-project">
-                Starting a new project? <a href="/about#contact">Let's talk</a>.
+                Starting a new project? <a href="/about">Let's talk</a>.
             </p>
         </div>
 
