--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -12,7 +12,7 @@
                 <a href="{{ .Permalink }}">
                     <div class="media">
                         <img src="{{ .Params.thumb }}" alt="{{ .Title }}" class="media-img"></img>
-                        <video src="{{ .Params.thumbvid }}" autoplay="yes" loop="yes" alt="{{ .Title }}" class="media-vid"></video>
+                        <video src="{{ .Params.thumbvid }}" autoplay loop muted alt="{{ .Title }}" class="media-vid"></video>
                     </div>
                     <div class="box">
                         <div class="row">
