--- a/static/css/main.css
+++ b/static/css/main.css
@@ -278,6 +278,13 @@ footer {
     font-weight: 300;
     display: block;
     color: #000;
+    -webkit-transition: all .2s ease-in-out;
+       -moz-transition: all .2s ease-in-out;
+            transition: all .2s ease-in-out;
+}
+
+.start-project a:hover {
+    color: rgba(0, 0, 0, 0.4);
 }
 
 .about-paragraph:first-child {
