Content and layout update

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,20 +2,20 @@
 
 <div>
     <div class="wrapper">
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-xs-12">
                 <h1 class="project-title">
                     {{ $.Param "title" }}
                 </h1>
             </div>
-        </div>
-        <div class="row center-xs">
+        </div> -->
+        <!-- <div class="row center-xs">
             <div class="col-xs-12">
                 <h2 class="project-intro">
                     {{ $.Param "intro" | safeHTML }}
                 </h2>
             </div>
-        </div>
+        </div> -->
         <div class="row center-xs">
             <div class="col-xs-12">
                 <p class="credit">
