--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,16 +17,16 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-7 col-xs-12 flex-space-between">
+        <div class="col-sm-8 col-xs-12 flex-space-between">
             <p class="about-paragraph about-paragraph-index">
-                I’m Matthew, North East based Graphic Designer specialising in Logo & Brand Identity Design. I'm currently working at Better Studio working on brand projects for a wide range of business sectors.
+                Hello, I’m Matthew, a designer specialising in Logo & Brand Identity Design. My work balances minimalism with meaning, to shape visual identities that matter. I'm currently part of the team at Better Studio creating brands for a wide range of business sectors.
             </p>
             <p class="start-project">
                 Starting a new project? <a href="/about">Let's talk</a>.
             </p>
         </div>
 
-        <div class="col-sm-4 col-sm-offset-1 col-xs-12 flex-space-between">
+        <div class="col-sm-4 col-xs-12 flex-space-between">
             <div>
                 <h3>Selected Work</h3>
                 <ul class="get-in-touch">
@@ -37,7 +37,7 @@
             </div>
 
             <a href="/work" class="large-link">
-                <div class="link-title">View all</div>
+                <div class="link-title">More</div>
                 <div class="dash"></div>
             </a>
         </div>
