--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -4,21 +4,15 @@
 
 <div class="wrapper">
     <div class="row">
-        <div class="col-xs-12 col-sm-6">
+        <div class="col-xs-12">
             <p class="about-paragraph">
-                I’m Matthew, North East based Graphic Designer specialising in Logo & Brand Identity. For the past 3 years I have worked as a Creative Designer for Better Brand Agency, working on projects for a wide range of business sectors.
+                Hello, I’m Matthew, a designer specialising in Logo<br> & Brand Identity Design. My work balances minimalism<br> with meaning, to shape visual identities that matter.<br> I'm currently part of the team at Better Studio creating<br> brands for a wide range of business sectors.
             </p>
             <p class="about-paragraph">
-                I’ve had experience in brand design, editorial, web design, art direction, photography and naming strategy.
+                I’ve had experience in brand design, editorial, web design,<br> art direction, photography and naming strategy.
             </p>
-            <h3>Contact</h3>
-            <ul class="get-in-touch">
-                <li><a href="mailto:hello@matthewgoodyear.com">Email</a></li>
-                <li><a href="https://www.instagram.com/goodyear.design/">Instagram</a></li>
-            </ul>
-            <!-- <h2>Capabilities</h2>
+            <!-- <h3>Capabilities</h3>
             <ul class="capabilities">
-                <li>Creative Direction</li>
                 <li>Logo Design</li>
                 <li>Identity System</li>
                 <li>Brand Guidelines</li>
@@ -26,13 +20,18 @@
                 <li>Digital Design</li>
                 <li>Print</li>
             </ul> -->
+            <h3>Let's Talk</h3>
+            <ul class="get-in-touch">
+                <li><a href="mailto:hello@matthewgoodyear.com">Email</a></li>
+                <li><a href="https://www.instagram.com/goodyear.design/">Instagram</a></li>
+            </ul>
             <h3>Work Index</h3>
             <ul class="work-index">
-                <!-- <div class="work-index-item">
-                    <li>Send Technology (2020)</li>
-                    <img src="/img/cubo/cubo_thumb.jpg" alt="">
-                </div>
                 <div class="work-index-item">
+                    <li>Send (2020)</li>
+                    <!-- <img src="/img/send/send_thumb.jpg" alt=""> -->
+                </div>
+                <!-- <div class="work-index-item">
                     <li>Troy Lake (2020)</li>
                     <img src="/img/cubo/cubo_thumb.jpg" alt="">
                 </div> -->
@@ -128,15 +127,6 @@
             </p>
         </div> -->
     </div>
-
-    <!-- <div class="row end-sm">
-        <div class="col-sm-4">
-            <a href="/work" class="large-link">
-                <div class="link-title">View work</div>
-                <div class="dash"></div>
-            </a>
-        </div>
-    </div> -->
 </div>
 
 {{ partial "footer.html" . }}
