--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{{ with .Page.Params.Title }}{{ . }} — {{ end }}Goodyear — Logo & Brand Identity</title>
+    <title>{{ with .Page.Params.Title }}{{ . }} | {{ end }}Goodyear Design</title>
     {{ with .Page.Params.description }}
     <meta name="description" content="{{ . }}">
     {{ else }}
