--- a/static/css/main.css
+++ b/static/css/main.css
@@ -626,6 +626,14 @@ h1.project-title {
         margin-bottom: 40px;
     }
 
+    .work-detail {
+        font-size: 20px;
+    }
+
+    .credit {
+        font-size: 16px;
+    }
+
     p, .navigation, .logo-link {
         font-size: 20px;
         line-height: 22px;
@@ -738,7 +746,7 @@ h1.project-title {
     }
 
     .banner {
-        margin-top: 30px;
+        margin-top: 15px;
     }
 
     .project-title {
@@ -757,10 +765,4 @@ h1.project-title {
         display: none;
         visibility: hidden;
     }
-
-    h4 {
-        font-size: 24px;
-        line-height: 28px;
-    }
-
 }
