--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -6,12 +6,15 @@
     <div class="row">
         <div class="col-xs-12">
             <p class="about-paragraph">
-                Hello, I’m Matthew, a designer specialising in Logo<br> & Brand Identity Design. My work balances minimalism<br> with meaning, to shape visual identities that matter.<br> I'm currently part of the team at Better Studio creating<br> brands for a wide range of business sectors.
+                Hello, I’m Matthew, a UK based designer specialising in Logo & Brand Identity Design. My work balances minimalism with meaning, to shape visual identities that matter.
             </p>
             <p class="about-paragraph">
-                I’ve had experience in brand design, editorial, web design,<br> art direction, photography and naming strategy.
+                I’m currently a creative designer at Better Studio, an award winning  design agency in Middlesbrough, UK. I’ve experience in brand design, editorial, web design, art direction and naming strategy.
             </p>
-            <!-- <h3>Capabilities</h3>
+            <p class="about-paragraph">
+                Over the past few years I’ve worked on projects for a wide range of business sectors including technology, professional services, property, sports and healthcare.
+            </p>
+            <h3>Capabilities</h3>
             <ul class="capabilities">
                 <li>Logo Design</li>
                 <li>Identity System</li>
@@ -19,7 +22,7 @@
                 <li>Editorial</li>
                 <li>Digital Design</li>
                 <li>Print</li>
-            </ul> -->
+            </ul>
             <h3>Let's Talk</h3>
             <ul class="get-in-touch">
                 <li><a href="mailto:hello@matthewgoodyear.com">Email</a></li>
@@ -29,12 +32,12 @@
             <ul class="work-index">
                 <div class="work-index-item">
                     <li>Send (2020)</li>
-                    <!-- <img src="/img/send/send_thumb.jpg" alt=""> -->
+                    <img src="/img/send/send_thumb.jpg" alt="">
                 </div>
-                <!-- <div class="work-index-item">
+                <div class="work-index-item">
                     <li>Troy Lake (2020)</li>
-                    <img src="/img/cubo/cubo_thumb.jpg" alt="">
-                </div> -->
+                    <!-- <img src="/img/cubo/cubo_thumb.jpg" alt=""> -->
+                </div>
                 <div class="work-index-item">
                     <li>Cubo (2020)</li>
                     <img src="/img/cubo/cubo_thumb.jpg" alt="">
@@ -88,16 +91,8 @@
                     <img src="/img/kader/kader_thumb.jpg" alt="">
                 </div>
                 <div class="work-index-item">
-                    <li>Realtime (2019)</li>
-                    <img src="/img/realtime/realtime_thumb.jpg" alt="">
-                </div>
-                <div class="work-index-item">
                     <li>Definition Agency (2019)</li>
                     <img src="/img/definition/definition_thumb.jpg" alt="">
-                </div>
-                <div class="work-index-item">
-                    <li>Digital Skills Academy (2019)</li>
-                    <img src="/img/dsa/dsa_thumb.jpg" alt="">
                 </div>
                 <div class="work-index-item">
                     <li>University Hospital Association (2018)</li>
