--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,15 +11,17 @@
     <div class="row">
         <div class="col-xs-12">
             <img src="/img/kinnery/kinnery_cards2.jpg" alt="project-img" class="project-img slides fade">
-            <img src="/img/essex/essex_spread2.jpg" alt="project-img" class="project-img slides fade">
-            <img src="/img/kader/kader_pitch.jpg" alt="project-img" class="project-img slides fade">
+            <img src="/img/essex/essex_spread3.jpg" alt="project-img" class="project-img slides fade">
+            <img src="/img/definition/definition_card1.jpg" alt="project-img" class="project-img slides fade">
+            <img src="/img/kader/kader_bag.jpg" alt="project-img" class="project-img slides fade">
+            <img src="/img/visualsoft/visualsoft_ad.jpg" alt="project-img" class="project-img slides fade">
         </div>
     </div>
 
     <div class="row">
         <div class="col-sm-8 col-xs-12 flex-space-between">
             <p class="about-paragraph about-paragraph-index">
-                Hello, I’m Matthew, a designer specialising in Logo & Brand Identity Design. My work balances minimalism with meaning, to shape visual identities that matter. I'm currently part of the team at Better Studio creating brands for a wide range of business sectors.
+                Hello, I’m Matthew, a North East based designer specialising in Logo & Brand Identity Design. My work balances minimalism with meaning, to shape visual identities that matter. I’m currently a creative designer at Better Studio.
             </p>
             <p class="start-project">
                 Starting a new project? <a href="/about">Let's talk</a>.
