--- a/static/css/main.css
+++ b/static/css/main.css
@@ -279,6 +279,7 @@ footer {
     font-family: 'Relative Book', sans-serif;
     font-weight: 300;
     display: block;
+    max-width: 740px;
     color: #000;
     -webkit-transition: all .2s ease-in-out;
        -moz-transition: all .2s ease-in-out;
