--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -9,10 +9,10 @@
                 Hello, I’m Matthew, a UK based designer specialising in Logo & Brand Identity Design. My work balances minimalism with meaning, to shape visual identities that matter.
             </p>
             <p class="about-paragraph">
-                I’m currently a creative designer at Better Studio, an award winning  design agency in Middlesbrough, UK. I’ve experience in brand design, editorial, web design, art direction and naming strategy.
+                I’m currently a creative designer at Better Studio, an award winning  design agency in Middlesbrough, UK. I’ve had experience in brand design, editorial, web design, art direction and naming strategy.
             </p>
             <p class="about-paragraph">
-                Over the past few years I’ve worked on projects for a wide range of business sectors including technology, professional services, property, sports and healthcare.
+                Over the past few years, I’ve had the opportunity to be involved in projects for a wide range of business sectors including technology, professional services, property, sports and healthcare.
             </p>
             <h3>Capabilities</h3>
             <ul class="capabilities">
